syntax = "proto3";

package user;

service UserService {
  rpc GetUserSportArea(GetUserSportAreaRequest) returns (GetUserSportAreaResponse) {}
  rpc GetUserProfile(GetUserProfileRequest) returns (GetUserProfileResponse){}
}

message GetUserSportAreaRequest {
  string sportAreaId = 1;
}

message GetUserSportAreaResponse {
  string userId = 1;
  string sportAreaId =2;
}


message GetUserProfileRequest {
  string access_token = 1;
}


message GetUserProfileResponse {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string email = 4;
  string photoURL = 5;
  string role = 6;
  string sportAreaId = 7;

}
